--- a/r-tech/netlify.toml
+++ b/r-tech/netlify.toml
@@ -1,3 +1,9 @@
 [build]
+  base = "r-tech"
   command = "npm run build"
   publish = "dist"
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
